Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIRVlsBBDuJ5j7uOcLTQlC",
+      "authorship_tag": "ABX9TyOBAZVacB/3tZnnmQBIUasI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5291,12 +5291,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aTPrLCFw2_3V",
-        "outputId": "58e4c96f-637d-44d5-f39a-27a0a4809dce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "aTPrLCFw2_3V",
+        "outputId": "58e4c96f-637d-44d5-f39a-27a0a4809dce"
       },
       "source": [
         "# logical vs. physical mode\n",
@@ -5416,8 +5416,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "edJXurBD5o-I",
-        "outputId": "f7fed851-6841-455b-ade3-22d9dfa4c64c",
         "colab": {
           "resources": {
             "http://localhost:8080/big-star.png": {
@@ -5439,7 +5437,9 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "edJXurBD5o-I",
+        "outputId": "f7fed851-6841-455b-ade3-22d9dfa4c64c"
       },
       "source": [
         "# 画像がないので不完全\n",
@@ -5524,12 +5524,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-aUp6DQb7eGY",
-        "outputId": "751cb6de-5e6c-4ef7-fe67-8951da399c9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 148
-        }
+        },
+        "id": "-aUp6DQb7eGY",
+        "outputId": "751cb6de-5e6c-4ef7-fe67-8951da399c9f"
       },
       "source": [
         "%%html\n",
@@ -5576,13 +5576,310 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y9GPr7uRBaCy",
+        "outputId": "1b7efce5-4bed-438e-f2aa-f50423072f62",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 148
+        }
+      },
+      "source": [
+        "# overflow hidden\n",
+        "%%html\n",
+        "<style>\n",
+        "    .box {\n",
+        "        border: 1px solid #333333;\n",
+        "        width: 200px;\n",
+        "        height: 100px;\n",
+        "        overflow: hidden;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+        "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+        "    visible.</div>\n",
+        "\n",
+        "<p>This content is outside of the box.</p>"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        border: 1px solid #333333;\n",
+              "        width: 200px;\n",
+              "        height: 100px;\n",
+              "        overflow: hidden;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+              "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+              "    visible.</div>\n",
+              "\n",
+              "<p>This content is outside of the box.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QWpnynvtBkcC",
+        "outputId": "e0c60996-099e-4a27-9530-60cb85cbec12",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 148
+        }
+      },
+      "source": [
+        "# overflow scroll\n",
+        "%%html\n",
+        "<style>\n",
+        "    .box {\n",
+        "        border: 1px solid #333333;\n",
+        "        width: 200px;\n",
+        "        height: 100px;\n",
+        "        overflow: scroll;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+        "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+        "    visible.</div>\n",
+        "\n",
+        "<p>This content is outside of the box.</p>"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        border: 1px solid #333333;\n",
+              "        width: 200px;\n",
+              "        height: 100px;\n",
+              "        overflow: scroll;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+              "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+              "    visible.</div>\n",
+              "\n",
+              "<p>This content is outside of the box.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OQuf_O2-B7Dd",
+        "outputId": "d3cf0ee3-96f9-4e4b-df62-d33c4ab00f40",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 148
+        }
+      },
+      "source": [
+        "# overflow-y scroll\n",
+        "%%html\n",
+        "<style>\n",
+        "    .box {\n",
+        "        border: 1px solid #333333;\n",
+        "        width: 200px;\n",
+        "        height: 100px;\n",
+        "        overflow-y: scroll;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+        "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+        "    visible.</div>\n",
+        "\n",
+        "<p>This content is outside of the box.</p>"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        border: 1px solid #333333;\n",
+              "        width: 200px;\n",
+              "        height: 100px;\n",
+              "        overflow-y: scroll;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+              "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+              "    visible.</div>\n",
+              "\n",
+              "<p>This content is outside of the box.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "63ZP0g45CA_V",
+        "outputId": "3b62b96d-37f2-4cda-98a3-4be18d801a12",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "# word\n",
+        "%%html\n",
+        "<style>\n",
+        "    .word {\n",
+        "        border: 5px solid #333333;\n",
+        "        width: 100px;\n",
+        "        font-size: 250%;\n",
+        "        overflow-x: scroll;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"word\">Overflow</div>"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .word {\n",
+              "        border: 5px solid #333333;\n",
+              "        width: 100px;\n",
+              "        font-size: 250%;\n",
+              "        overflow-x: scroll;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"word\">Overflow</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uFjdkY2QDHFb",
+        "outputId": "941a1536-b346-4ebc-c99d-7ce8558eaecd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        }
+      },
+      "source": [
+        "# auto\n",
+        "%%html\n",
+        "<style>\n",
+        "    .box {\n",
+        "        border: 5px solid #333333;\n",
+        "        width: 200px;\n",
+        "        height: 100px;\n",
+        "        overflow: auto;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+        "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+        "    visible.</div>\n",
+        "\n",
+        "<p>This content is outside of the box.</p>"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        border: 5px solid #333333;\n",
+              "        width: 200px;\n",
+              "        height: 100px;\n",
+              "        overflow: auto;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"box\">This box has a height and a width. This means that if there is too much content to be displayed within\n",
+              "    the assigned height, there will be an overflow situation. If overflow is set to hidden then any overflow will not be\n",
+              "    visible.</div>\n",
+              "\n",
+              "<p>This content is outside of the box.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C25-kvtPDp-O"
+      },
+      "source": [
+        "# CSS の値と単位 value and units\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "akBReUmgD0jH"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "2nhWa1BHS4qb"
       },
       "source": [
         "# いまここ\n",
-        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Overflowing_content"
+        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Values_and_units"
       ]
     }
   ]
