Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8GrHRjutox/SQxnIJw+pm",
+      "authorship_tag": "ABX9TyMc0FwlxiVI4rz8P/3nZvBr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5919,12 +5919,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XrcT_a2xO6gE",
-        "outputId": "28766d91-e29f-4bd4-a233-e76b9493c05c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 463
-        }
+        },
+        "id": "XrcT_a2xO6gE",
+        "outputId": "28766d91-e29f-4bd4-a233-e76b9493c05c"
       },
       "source": [
         "# 実験\n",
@@ -5978,6 +5978,44 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rZfOXNsEf81H"
+      },
+      "source": [
+        "%%script false\n",
+        "data type\n",
+        "<integer>\n",
+        "<number>\n",
+        "<dimension>\n",
+        "<length> 5mm, 1em\n",
+        "<angle> 45deg\n",
+        "<time> 1000s\n",
+        "<resolution> 10px\n",
+        "<percentage> 10%\n",
+        "\n",
+        "length unit\n",
+        "cm 1cm = 96px/2.54\n",
+        "mm 1mm = 96px/2.54/10\n",
+        "Q Quarter-millimeters 1Q = 1/4 mm\n",
+        "in Inches 1in = 2.54cm = 96px\n",
+        "pc Picas 1pc = 1/6 inch = 16px\n",
+        "pt Points 1pt = 1/72 inch = 96 / 72 px\n",
+        "px Pixels\n",
+        "em font-size\n",
+        "ex height of x\n",
+        "ch width of 0\n",
+        "rem font-size of root\n",
+        "lh line-height\n",
+        "vw viewport width %\n",
+        "vh viewport height %\n",
+        "vmin minimum of viewport width and height %\n",
+        "vmax maximum of viewport width and height %\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
