Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNgNmfPiDZC1chbAGwMs8i5",
+      "authorship_tag": "ABX9TyO5ZCxRXpdYVBmrqJ2K1rCQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6020,12 +6020,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eTqq2-OryNXf",
-        "outputId": "f42a75f0-7f0c-44d9-c892-1bc577454fc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
-        }
+        },
+        "id": "eTqq2-OryNXf",
+        "outputId": "f42a75f0-7f0c-44d9-c892-1bc577454fc2"
       },
       "source": [
         "%%html\n",
@@ -6102,12 +6102,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ifM22CBpzs3-",
-        "outputId": "4a7e43d5-62c6-47f2-8b47-8f93f546dbed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
-        }
+        },
+        "id": "ifM22CBpzs3-",
+        "outputId": "4a7e43d5-62c6-47f2-8b47-8f93f546dbed"
       },
       "source": [
         "# em と rem\n",
@@ -6203,6 +6203,87 @@
               "        </ul>\n",
               "    </li>\n",
               "</ul>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PIOXjkzSHjVv",
+        "outputId": "c5fbf1e0-ec37-4846-d0ed-7c201f666186",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        }
+      },
+      "source": [
+        "# percent\n",
+        "%%html\n",
+        "<style>\n",
+        "    .wrapper {\n",
+        "        width: 400px;\n",
+        "        border: 5px solid rebeccapurple;\n",
+        "    }\n",
+        "\n",
+        "    .box {\n",
+        "        padding: 10px;\n",
+        "        border: 5px solid blue;\n",
+        "    }\n",
+        "\n",
+        "    .px {\n",
+        "        width: 200px;\n",
+        "    }\n",
+        "\n",
+        "    .percent {\n",
+        "        width: 40%;\n",
+        "    }\n",
+        "</style>\n",
+        "<div class=\"box px\">I am 200px wide</div>\n",
+        "<div class=\"box percent\">I am 40% wide</div>\n",
+        "<div class=\"wrapper\">\n",
+        "    <div class=\"box px\">I am 200px wide</div>\n",
+        "    <div class=\"box percent\">I am 40% wide</div>\n",
+        "</div>"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .wrapper {\n",
+              "        width: 400px;\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "    }\n",
+              "\n",
+              "    .box {\n",
+              "        padding: 10px;\n",
+              "        border: 5px solid blue;\n",
+              "    }\n",
+              "\n",
+              "    .px {\n",
+              "        width: 200px;\n",
+              "    }\n",
+              "\n",
+              "    .percent {\n",
+              "        width: 40%;\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"box px\">I am 200px wide</div>\n",
+              "<div class=\"box percent\">I am 40% wide</div>\n",
+              "<div class=\"wrapper\">\n",
+              "    <div class=\"box px\">I am 200px wide</div>\n",
+              "    <div class=\"box percent\">I am 40% wide</div>\n",
+              "</div>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
