Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMLFmoOd3/yluF6PjshFyre",
+      "authorship_tag": "ABX9TyPBuzhQxPtrgp4WTgVqAnUC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,25 +32,16 @@
       },
       "source": [
         "# メモ\n",
-        "\n",
-        "1. このノートブックはsvg01.ipynbで、ここでsvgの勉強をする。\n",
+        "1. svg の勉強をする。\n",
         "1. Colab で読まれることを想定している。\n",
-        "1. マジックコマンドは %%svg と %%html があるが、%%html を使う。\n",
+        "1. マジックコマンドは %%html を使う。\n",
         "\n",
         "参考サイト、とか。\n",
+        "1. https://boxy-svg.com/tutorials\n",
         "1. w3scools.com svg tutorial https://www.w3schools.com/graphics/svg_intro.asp\n",
         "1. w3schools SVG examples https://www.w3schools.com/graphics/svg_examples.asp\n",
         "1. learn inkscape https://inkscape.org/learn/\n",
         "1. mdn web docs svg tutorial https://developer.mozilla.org/ja/docs/Web/SVG/Tutorial"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QvyBP_bEL3cK"
-      },
-      "source": [
-        "# 最初の例"
       ]
     },
     {
@@ -78,7 +69,7 @@
         "  <circle cx=\"100\" cy=\"100\" r=\"80\" stroke=\"green\" stroke-width=\"8\" fill=\"yellow\" />\n",
         "</svg>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -111,7 +102,6 @@
       "source": [
         "# 実験 circle だけで描く顔\n",
         "%%html\n",
-        "\n",
         "<svg width=\"100\" height=\"100\" >\n",
         "  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />\n",
         "  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />\n",
@@ -208,25 +198,35 @@
         "id": "hLmP7416NpfQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 130
+          "height": 157
         },
-        "outputId": "55558cc0-4bda-48af-a874-f0b9444158ae"
+        "outputId": "31c0aff1-f682-4137-af8a-b1cdbd124bc2"
       },
       "source": [
         "%%html\n",
-        "\n",
-        "<svg width=\"400\" height=\"110\">\n",
+        "<style>\n",
+        "    html, body {\n",
+        "        background-color: yellow;\n",
+        "    }\n",
+        "</style>\n",
+        "<br>\n",
+        "<svg width=\"500\" height=\"120\" style=\"background-color:hotpink;\">\n",
         "  <rect width=\"300\" height=\"100\" style=\"fill:rgb(0,0,255);stroke-width:20;stroke:rgb(0,0,0)\" />\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "\n",
-              "<svg width=\"400\" height=\"110\">\n",
+              "<style>\n",
+              "    html, body {\n",
+              "        background-color: yellow;\n",
+              "    }\n",
+              "</style>\n",
+              "<br>\n",
+              "<svg width=\"500\" height=\"120\" style=\"background-color:hotpink;\">\n",
               "  <rect width=\"300\" height=\"100\" style=\"fill:rgb(0,0,255);stroke-width:20;stroke:rgb(0,0,0)\" />\n",
               "</svg>"
             ],
@@ -246,7 +246,7 @@
         "id": "ApuPw2cSPN5-"
       },
       "source": [
-        "stroke-widthの幅を広くすると、上と左が半分欠けるのがよくわかる。避けたいが、まああわてない。\n",
+        "stroke-widthの幅を広くすると、上と左が半分欠ける。\n",
         "\n",
         "属性はバラバラにも書ける。名称も同じ。"
       ]
@@ -257,26 +257,91 @@
         "id": "B9g4gP88PhAS",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 130
+          "height": 140
         },
-        "outputId": "9c27b337-f9f6-4c77-a76a-dc65f9fe6b6f"
+        "outputId": "44ba1e73-c605-43e5-97de-bfc77cb33a81"
       },
       "source": [
         "%%html\n",
         "\n",
-        "<svg width=\"400\" height=\"110\">\n",
-        "  <rect width=\"300\" height=\"100\" fill=\"yellow\" stroke-width=\"20\" stroke=\"blue\"/>\n",
+        "<svg width=\"320\" height=\"120\">\n",
+        "  <rect x=\"10\" y=\"10\" width=\"300\" height=\"100\" fill=\"yellow\" stroke-width=\"20\" stroke=\"blue\">\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "<svg width=\"400\" height=\"110\">\n",
-              "  <rect width=\"300\" height=\"100\" fill=\"yellow\" stroke-width=\"20\" stroke=\"blue\"/>\n",
+              "<svg width=\"320\" height=\"120\">\n",
+              "  <rect x=\"10\" y=\"10\" width=\"300\" height=\"100\" fill=\"yellow\" stroke-width=\"20\" stroke=\"blue\">\n",
+              "</svg>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w2AMrY1WOhB0"
+      },
+      "source": [
+        "svg の stroke の太さは画像のサイズ内外に半分ずつ幅を取っていることがわかる。  \n",
+        "stroke-width が 20 でも x, y を 10, 10 から描き始めて欠けない"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TUaIOBGkRBSk",
+        "outputId": "6226b665-9ec1-41ac-a504-d6086dbd8db6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        }
+      },
+      "source": [
+        "# colab デフォルトの height を調べよう\n",
+        "%%html\n",
+        "<svg>\n",
+        "  <rect width=\"250\" height=\"140\"\n",
+        "  style=\"fill:green;stroke:red;stroke-width:20;\" >\n",
+        "</svg>\n",
+        "<svg>\n",
+        "  <rect width=\"250\" height=\"150\"\n",
+        "  style=\"fill:green;stroke:red;\" >\n",
+        "</svg>\n",
+        "<svg>\n",
+        "  <rect width=\"250\" height=\"110\"\n",
+        "  style=\"x=10;y=10;fill:green;stroke:red;stroke-width:20;\" >\n",
+        "</svg>"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<svg>\n",
+              "  <rect width=\"250\" height=\"140\"\n",
+              "  style=\"fill:green;stroke:red;stroke-width:20;\" >\n",
+              "</svg>\n",
+              "<svg>\n",
+              "  <rect width=\"250\" height=\"150\"\n",
+              "  style=\"fill:green;stroke:red;\" >\n",
+              "</svg>\n",
+              "<svg>\n",
+              "  <rect width=\"250\" height=\"110\"\n",
+              "  style=\"x=10;y=10;fill:green;stroke:red;stroke-width:20;\" >\n",
               "</svg>"
             ],
             "text/plain": [
@@ -295,28 +360,28 @@
         "id": "5bfSGo4wQHv-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 199
+          "height": 170
         },
-        "outputId": "2995a7ed-cb50-4df3-d1b6-ed9686da54ac"
+        "outputId": "bb845d8b-5cce-42e6-ffa8-91bfa5475c41"
       },
       "source": [
         "%%html\n",
-        "\n",
-        "<svg width=\"400\" height=\"180\">\n",
+        "<!-- <svg width=\"400\" height=\"180\"> -->\n",
+        "<svg>\n",
         "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
-        "  style=\"fill:blue;stroke:pink;stroke-width:20;fill-opacity:0.1;stroke-opacity:0.9\" />\n",
+        "  style=\"fill:mediumblue;stroke:pink;stroke-width:20;fill-opacity:0.9;stroke-opacity:0.9\" />\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "\n",
-              "<svg width=\"400\" height=\"180\">\n",
+              "<!-- <svg width=\"400\" height=\"180\"> -->\n",
+              "<svg>\n",
               "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
-              "  style=\"fill:blue;stroke:pink;stroke-width:20;fill-opacity:0.1;stroke-opacity:0.9\" />\n",
+              "  style=\"fill:mediumblue;stroke:pink;stroke-width:20;fill-opacity:0.9;stroke-opacity:0.9\" />\n",
               "</svg>"
             ],
             "text/plain": [
