Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBuzhQxPtrgp4WTgVqAnUC",
+      "authorship_tag": "ABX9TyN2FcsGkuu0TNlDvNH4BkFU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,11 +198,12 @@
         "id": "hLmP7416NpfQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 157
+          "height": 237
         },
-        "outputId": "31c0aff1-f682-4137-af8a-b1cdbd124bc2"
+        "outputId": "f209e562-476d-4a0f-982f-4762b73fbef0"
       },
       "source": [
+        "# どのように場所が取られるか実験\n",
         "%%html\n",
         "<style>\n",
         "    html, body {\n",
@@ -210,11 +211,11 @@
         "    }\n",
         "</style>\n",
         "<br>\n",
-        "<svg width=\"500\" height=\"120\" style=\"background-color:hotpink;\">\n",
+        "<svg width=\"500\" height=\"200\" style=\"background-color:hotpink;\">\n",
         "  <rect width=\"300\" height=\"100\" style=\"fill:rgb(0,0,255);stroke-width:20;stroke:rgb(0,0,0)\" />\n",
         "</svg>"
       ],
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -226,7 +227,7 @@
               "    }\n",
               "</style>\n",
               "<br>\n",
-              "<svg width=\"500\" height=\"120\" style=\"background-color:hotpink;\">\n",
+              "<svg width=\"500\" height=\"200\" style=\"background-color:hotpink;\">\n",
               "  <rect width=\"300\" height=\"100\" style=\"fill:rgb(0,0,255);stroke-width:20;stroke:rgb(0,0,0)\" />\n",
               "</svg>"
             ],
@@ -268,7 +269,7 @@
         "  <rect x=\"10\" y=\"10\" width=\"300\" height=\"100\" fill=\"yellow\" stroke-width=\"20\" stroke=\"blue\">\n",
         "</svg>"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -303,14 +304,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "TUaIOBGkRBSk",
-        "outputId": "6226b665-9ec1-41ac-a504-d6086dbd8db6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "outputId": "cc0b8b66-edf6-47c0-f11a-dadafcfb6104"
       },
       "source": [
-        "# colab デフォルトの height を調べよう\n",
+        "# colab デフォルトの height を調べよう => svg height=\"150\", shape => 150 - stroke-width\n",
         "%%html\n",
         "<svg>\n",
         "  <rect width=\"250\" height=\"140\"\n",
@@ -320,12 +321,12 @@
         "  <rect width=\"250\" height=\"150\"\n",
         "  style=\"fill:green;stroke:red;\" >\n",
         "</svg>\n",
-        "<svg>\n",
-        "  <rect width=\"250\" height=\"110\"\n",
-        "  style=\"x=10;y=10;fill:green;stroke:red;stroke-width:20;\" >\n",
-        "</svg>"
+        "<svg width=\"250\" height=\"150\">\n",
+        "  <rect width=\"230\" height=\"130\" x=\"10\" y = \"10\"\n",
+        "  style=\"fill:green;stroke:red;stroke-width:20;\" >\n",
+        "</svg>\n"
       ],
-      "execution_count": 42,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,9 +340,9 @@
               "  <rect width=\"250\" height=\"150\"\n",
               "  style=\"fill:green;stroke:red;\" >\n",
               "</svg>\n",
-              "<svg>\n",
-              "  <rect width=\"250\" height=\"110\"\n",
-              "  style=\"x=10;y=10;fill:green;stroke:red;stroke-width:20;\" >\n",
+              "<svg width=\"250\" height=\"150\">\n",
+              "  <rect width=\"230\" height=\"130\" x=\"10\" y = \"10\"\n",
+              "  style=\"fill:green;stroke:red;stroke-width:20;\" >\n",
               "</svg>"
             ],
             "text/plain": [
@@ -362,17 +363,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "bb845d8b-5cce-42e6-ffa8-91bfa5475c41"
+        "outputId": "c940dedc-7495-43c2-e5f8-b717fa91dcf3"
       },
       "source": [
+        "# 不透明度 opacity\n",
         "%%html\n",
         "<!-- <svg width=\"400\" height=\"180\"> -->\n",
         "<svg>\n",
-        "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
+        "  <rect x=\"10\" y=\"10\" width=\"130\" height=\"130\"\n",
         "  style=\"fill:mediumblue;stroke:pink;stroke-width:20;fill-opacity:0.9;stroke-opacity:0.9\" />\n",
         "</svg>"
       ],
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,7 +382,7 @@
             "text/html": [
               "<!-- <svg width=\"400\" height=\"180\"> -->\n",
               "<svg>\n",
-              "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
+              "  <rect x=\"10\" y=\"10\" width=\"130\" height=\"130\"\n",
               "  style=\"fill:mediumblue;stroke:pink;stroke-width:20;fill-opacity:0.9;stroke-opacity:0.9\" />\n",
               "</svg>"
             ],
@@ -400,69 +402,32 @@
         "id": "jHTqq-iAQqd8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 199
+          "height": 200
         },
-        "outputId": "a2adf126-a147-4055-d96a-74c6f6e2a6c9"
+        "outputId": "d21c546a-f74d-407a-acd2-104bb05c3eae"
       },
       "source": [
+        "# センタリング\n",
         "%%html\n",
         "<div style=\"text-align:center\">\n",
-        "<svg width=\"400\" height=\"180\">\n",
-        "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
-        "  style=\"fill:blue;stroke:pink;stroke-width:20;fill-opacity:0.1;stroke-opacity:0.9\" />\n",
-        "</svg>\n",
+        "    <svg width=\"400\" height=\"180\">\n",
+        "        <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
+        "            style=\"fill:blue;stroke:pink;stroke-width:20;fill-opacity:0.1;stroke-opacity:0.9\" />\n",
+        "    </svg>\n",
         "</div>"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<div style=\"text-align:center\">\n",
-              "<svg width=\"400\" height=\"180\">\n",
-              "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
-              "  style=\"fill:blue;stroke:pink;stroke-width:20;fill-opacity:0.1;stroke-opacity:0.9\" />\n",
-              "</svg>\n",
+              "    <svg width=\"400\" height=\"180\">\n",
+              "        <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
+              "            style=\"fill:blue;stroke:pink;stroke-width:20;fill-opacity:0.1;stroke-opacity:0.9\" />\n",
+              "    </svg>\n",
               "</div>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_z0CdrzjRPg5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 199
-        },
-        "outputId": "f6e7ac13-e272-40b8-f2bf-2e1c441f7135"
-      },
-      "source": [
-        "%%html\n",
-        "<svg width=\"400\" height=\"180\">\n",
-        "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
-        "  style=\"fill:blue;stroke:pink;stroke-width:5;opacity:0.5\" />\n",
-        "</svg>"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<svg width=\"400\" height=\"180\">\n",
-              "  <rect x=\"50\" y=\"20\" width=\"150\" height=\"150\"\n",
-              "  style=\"fill:blue;stroke:pink;stroke-width:5;opacity:0.5\" />\n",
-              "</svg>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -480,9 +445,9 @@
         "id": "4PcZpH5IZkLB",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 199
+          "height": 200
         },
-        "outputId": "ef8e4f55-6591-4918-99f5-7c898f29476d"
+        "outputId": "69238889-eaec-41d1-ab8f-5d9ec4aafca5"
       },
       "source": [
         "%%html\n",
@@ -492,7 +457,7 @@
         "  style=\"fill:red;stroke:black;stroke-width:5;opacity:0.5\" />\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
